# linkedin

./: SKILL.md
agents/: openai.yaml
checklists/: style_match_checklist.md
data/: corpus_25_posts.md  style_analysis_report.md
examples/: input_olive_better.md  output_olive_better_long_style.md  output_olive_better_style.md
linkedin-publisher/: .env.example  .gitignore  CHANGELOG.md  PROJECT_CHARTER.md  README.md  REVIEW_HANDOFF.md  pyproject.toml
linkedin-publisher/docs/: LINKEDIN_APP_SETUP.md  RELEASE_CHECKLIST.md  TEST_PLAN.md
linkedin-publisher/src/linkedin_publisher/: __init__.py  audit_log.py  cli.py  config.py  db.py  draft_service.py  errors.py  linkedin_auth.py  linkedin_client.py  main.py  models.py  publisher_service.py  review_service.py  schemas.py  token_crypto.py
linkedin-publisher/src/linkedin_publisher/routes/: __init__.py  auth.py  drafts.py  publish.py
linkedin-publisher/src/linkedin_publisher/templates/: auth_status.html  base.html  draft_detail.html  drafts_list.html  publish_confirm.html
linkedin-publisher/tests/: conftest.py  test_auth_flow.py  test_config.py  test_draft_store.py  test_linkedin_client.py  test_publish_flow.py  test_publish_guardrails.py  test_review_workflow.py  test_web_ui.py
templates/: blog_generation_prompt.md  raw_material_template.md  revision_prompt.md
최종글/: 2026-07-01_학위보다_중요한_것은_번역되는_경험이다.md
